limpando arquivos desnecessarios

--- a/user/favorite-roads/index.html
+++ b/user/favorite-roads/index.html
@@ -21,7 +21,7 @@
         <nav>
             <ul class="grid-header">
                 <li class="menu-btn">
-                    <img id="showMenu" class="menu-icon" src="../../img/logomarca-png.png"
+                    <img class="menu-icon" src="../../img/logomarca-png.png"
                             alt="Logomarca do Nexus Studium">
                 </li>
                 <li class="search-bar">
