--- a/user/historic/index.html
+++ b/user/historic/index.html
@@ -15,128 +15,10 @@
 </head>
 
 <body>
-    <aside class="sidebar ocult-sidebar">
-        <header class="flex">
-            <img src="./img/logomarca-png.png" width="150px" height="150px" />
-        </header>
-        <ul>
-            <li>
-                <a href="./login-page/index.html"><button type="button" onclick="onClick(this)">
-                        <i class="ai-home-alt1"></i>
-                        <p>Início</p>
-                    </button></a>
-            </li>
-            <li>
-                <button type="button" onclick="onClick(this)">
-                    <i class="ai-person-check"></i>
-                    <p>Perfil</p>
-                    <i class="ai-chevron-down-small"></i>
-                </button>
-                <div class="sub-menu">
-                    <ul>
-                        <li>
-                            <a href="./user/historic/index.html">
-                                <button type="button">Histórico</button>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./user/who-follow/index.html">
-                                <button type="button">Quem eu sigo</button>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./user/favorite-roads/index.html">
-                                <button type="button">Trilhas favoritas</button>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-
-            <li> <!-- ============= MARCOS =============== -->
-                <a href="./doug/article/article.html">
-                    <button type="button" onclick="onClick(this)">
-                        <i class="ai-book-open"></i>
-                        <p>Artigos</p>
-                    </button>
-                </a>
-            </li>
-            <li>
-                <a href="./doug/exercises/exercises.html">
-                    <button type="button" onclick="onClick(this)">
-                        <i class="ai-folder-add"></i>
-                        <p>Exercícios</p>
-                    </button>
-                </a>
-            </li>
-            <li>
-                <a href="./doug/comunity/comunity.html">
-                    <button type="button" onclick="onClick(this)">
-                        <i class="ai-people-group"></i>
-                        <p>Comunidade</p>
-                    </button>
-                </a>
-            </li>
-            <li>
-                <a href="./user/historic/index.html">
-                    <button type="button" onclick="onClick(this)">
-                        <i class="ai-statistic-up"></i>
-                        <p>Progresso</p>
-                    </button>
-                </a>
-            </li>
-            <li>
-                <button type="button" onclick="onClick(this)">
-                    <i class="ai-question"></i>
-                    <p>Ajuda</p>
-                    <i class="ai-chevron-down-small"></i>
-
-                </button>
-                <div class="sub-menu">
-                    <ul>
-                        <li>
-                            <a href="./doug/help/help-page.html">
-                                <button type="button">Perguntas Frequentes</button>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./doug/help/help-page.html">
-                                <button type="button">Sobre</button>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./doug/help/help-page.html">
-                                <button type="button">Feedback</button>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./doug/help/help-page.html">
-                                <button type="button">Suporte</button>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-            <li>
-                <button type="button" onclick="onClick(this)">
-                    <i class="ai-language"></i>
-                    <p>Idiomas</p>
-                </button>
-            </li>
-            <li>
-                <a href="./user-settings/user-information/index.html">
-                    <button type="button" onclick="onClick(this)">
-                        <i class="ai-gear"></i>
-                        <p>Configurações</p>
-                    </button>
-                </a>
-            </li>
-        </ul>
-    </aside>
     <header>
         <nav>
             <ul class="grid-header">
-                <li class="menu-btn" id="showMenu">
+                <li class="menu-btn">
                     <img class="menu-icon" src="../../img/logomarca-png.png" alt="Logomarca do Nexus Studium">
                 </li>
                 <li class="search-bar">
