devolvendo modal de login para tela inicial

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           </div>
         </li>
         <li class="button-header">
-          <button>login</button>
+          <button id="openModalBtn">login</button>
           <button>cadastre-se</button>
           <a href="../user/historic/index.html">
           </a>
