melhorando modal de login

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <div class="bg-input flex">
         <form class="space flex">
           <input type="text" id="input1" name="input1" placeholder="Email"><br><br>
-          <input type="text" id="input2" name="input2" placeholder="Senha"><br><br>
+          <input type="password" id="input2" name="input2" placeholder="Senha"><br><br>
           <button type="submit" class="btn-login"><a href="./login-page/index.html">Entrar</a></button>
           <div class="more-options">
             <button type="submit" class="btn-more">Entrar com Google</button>
