fazendo links entre paginas

--- a/login-page/topics.html
+++ b/login-page/topics.html
@@ -73,7 +73,7 @@
             <div><a class="topic-back-btn" href="./index.html">Voltar</a></div>
             <div class="groups flex">
                 <div class="gp-1">
-                    <div><a class="topic-btn" href="">JavaScript</a></div>
+                    <div><a class="topic-btn" href="../search-page/index.html">JavaScript</a></div>
                     <div><a class="topic-btn" href="">C#</a></div>
                     <div><a class="topic-btn" href="">HTML/CSS</a></div>
                 </div>
