--- a/search-page/index.html
+++ b/search-page/index.html
@@ -175,8 +175,10 @@
                 <div class="videos flex">
                     <i class="ai-chevron-left"></i>
                     <div class="choice">
-                        <div class="video"><img src="" alt=""></div>
-                        <p class="video-title flex">Programando do zero</p>
+                        <a href="../doug/playervideo/player.html">
+                            <div class="video"><img src="" alt=""></div>
+                        <p class="video-title flex">Produtividade como DEV</p>
+                        </a>
                     </div>
                     <div class="choice">
                         <div class="video"><img src="" alt=""></div>
@@ -221,8 +223,10 @@
                 <div class="videos flex">
                     <i class="ai-chevron-left"></i>
                     <div class="choice">
-                        <div class="video"><img src="" alt=""></div>
+                        <a href="../doug/playervideo/player.html">
+                            <div class="video"><img src="" alt=""></div>
                         <p class="video-title flex">Produtividade como DEV</p>
+                        </a>
                     </div>
                     <div class="choice">
                         <div class="video"><img src="" alt=""></div>
