searchbar em paginas faltantes

--- a/search-page/index.html
+++ b/search-page/index.html
@@ -177,12 +177,12 @@
                     <div class="choice">
                         <a href="../doug/playervideo/player.html">
                             <div class="video"><img src="" alt=""></div>
-                        <p class="video-title flex">Produtividade como DEV</p>
+                        <p class="video-title flex">Iniciando PHP</p>
                         </a>
                     </div>
                     <div class="choice">
                         <div class="video"><img src="" alt=""></div>
-                        <p class="video-title flex">Iniciando PHP</p>
+                        <p class="video-title flex">Começando JS do zero</p>
                     </div>
                     <div class="choice">
                         <div class="video"><img src="" alt=""></div>
