pagina de artigos finalizada

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
+ 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+ 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
@@ -20,11 +20,11 @@
   <script src="https://unpkg.com/akar-icons-fonts"></script>
   <title>Nexus Studium</title>
 </head>
-
+ 
 <body>
   <aside class="sidebar ocult-sidebar">
     <header class="flex">
-      <img src="./img/logomarca-png.png" width="150px" height="150px" />
+      <img src="img/logomarca-png.png" width="150px" height="150px" />
     </header>
     <ul>
       <li>
@@ -59,7 +59,7 @@
           </ul>
         </div>
       </li>
-
+ 
       <li> <!-- ============= MARCOS =============== -->
         <a href="./doug/article/article.html">
           <button type="button" onclick="onClick(this)">
@@ -97,7 +97,7 @@
           <i class="ai-question"></i>
           <p>Ajuda</p>
           <i class="ai-chevron-down-small"></i>
-
+ 
         </button>
         <div class="sub-menu">
           <ul>
@@ -140,11 +140,11 @@
       </li>
     </ul>
   </aside>
-
+ 
   <header>
     <nav>
       <ul class="nav flex">
-        <li class="nav-btn flex"><img id="showMenu" src="../img/logomarca-png.png" alt="Logomarca NexusStudium"
+        <li class="nav-btn flex"><img id="showMenu" src="img/logomarca-png.png" alt="Logomarca NexusStudium"
             width="100px">
         </li>
         <li class="search-bar">
@@ -165,10 +165,10 @@
       </ul>
     </nav>
   </header>
-
+ 
   <main class="grid-container">
     <div class="container">
-
+ 
       <div class="panel flex active">
         <h3 class="carrossel-title">Trilha</h3>
         <p class="carrossel-sub">Se desenvolva através de um caminho pré-definido por profissionais experientes
@@ -181,21 +181,21 @@
       <div class="panel flex">
         <h3 class="carrossel-title">Exercícios</h3>
         <p class="carrossel-sub">Pratique seus conhecimentos através de exercícios</p>
-
+ 
       </div>
       <div class="panel flex">
         <h3 class="carrossel-title">Comunidade</h3>
         <p class="carrossel-sub">Retire suas dúvidas e expanda seus conhecimentos com auxilio de outros usuários
         </p>
-
+ 
       </div>
       <div class="panel flex">
         <h3 class="carrossel-title">Em alta</h3>
         <p class="carrossel-sub">Busque os vídeos e trilhas mais vistos</p>
-
+ 
       </div>
     </div>
-
+ 
     <aside class="topics">
       <div class="gp-1">
         <div class="topic-btn">ENEM</div>
@@ -214,7 +214,7 @@
       </div>
     </aside>
   </main>
-
+ 
   <footer>
     <div class="links">
       <div class="help-footer">
@@ -232,7 +232,7 @@
       <p>Copyright &copy; Todos os direitos reservados</p>
     </div>
   </footer>
-
+ 
   <div id="myModal" class="modal">
     <div class="modal-content flex">
       <span class="close">x</span>
@@ -251,9 +251,10 @@
       </div>
     </div>
   </div>
-
+ 
   <script src="./components/sidebar/sidebar.js"></script>
   <script src="./script.js"></script>
 </body>
-
+ 
 </html>
+ 
