ainda adicionandoi as funcoes na pagina help

--- a/doug/help/help-page.html
+++ b/doug/help/help-page.html
@@ -40,17 +40,17 @@
                 <h2>AJUDA</h2>
                 <nav>
                     <ul class="help_list">
-                        <li>PERGUNTAS FREQUENTES <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
-                        <li>SOBRE <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
-                        <li>FEEDBACK <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
-                        <li>SUPORTE <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
+                        <li id="help_faq">PERGUNTAS FREQUENTES <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
+                        <li id="help_about">SOBRE <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
+                        <li id="help_feedback">FEEDBACK <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
+                        <li id="help_suport">SUPORTE <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
                     </ul>
                 </nav>
 
             </div>
 
 <!-- =========================PAINEL QUESTION ========================-->
-            <div class="faq-container">
+            <div id="faq_container" class="faq-container">
 
                 <h2>Perguntas Frequentes</h2>
 
