links de paginas da pasta doug

--- a/doug/exercises/exercises.html
+++ b/doug/exercises/exercises.html
@@ -213,7 +213,7 @@
 
             <div class="painel_content_iten">
                 <div class="content_iten_title_icons">
-                    <a href="#" class="content_iten_title">Tecnologia para Programadores</a>
+                    <a href="../../exercises/index.html" class="content_iten_title">Algoritmos</a>
                     <div class="content_iten_icon">
                         <i class="fa-solid fa-circle-check"
                             style="color: #8DB1AB; font-size: 28px; margin-right: 10px; "></i>
