--- a/doug/article/article.html
+++ b/doug/article/article.html
@@ -191,7 +191,7 @@
 
             <div class="painel_content_iten">
                 <div class="content_iten_title_icons">
-                    <a href="#" class="content_iten_title">Tecnologia para Programadores</a>
+                    <a href="../../article/index.html" class="content_iten_title">Tecnologia para Programadores</a>
                     <div class="content_iten_icon">
                         <i class="fa-solid fa-circle-check"
                             style="color: #8DB1AB; font-size: 28px; margin-right: 10px; "></i>
@@ -213,7 +213,7 @@
 
             <div class="painel_content_iten">
                 <div class="content_iten_title_icons">
-                    <a href="#" class="content_iten_title">Tecnologia para Programadores</a>
+                    <a href="#" class="content_iten_title">Estudando todos os dias</a>
                     <div class="content_iten_icon">
                         <i class="fa-solid fa-circle-check"
                             style="color: #8DB1AB; font-size: 28px; margin-right: 10px; "></i>
