links e sidebar telas doug

--- a/doug/comunity/comunity.html
+++ b/doug/comunity/comunity.html
@@ -158,7 +158,7 @@
                 </li>
                 <li class="user-button">
                     <div class="flex user-page">
-                        <i class="fa-solid fa-user fa-2x"></i>
+                        <a href="../../user/historic/index.html"><i class="fa-solid fa-user fa-2x"></i></a>
                     </div>
                 </li>
             </ul>
