--- a/doug/article/article.html
+++ b/doug/article/article.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../img/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -10,8 +12,6 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <script src="https://unpkg.com/akar-icons-fonts"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artigos</title>
     <link rel="stylesheet" href="../../components/sidebar/sidebar.css">
     <link rel="stylesheet" href="../style.css">
@@ -158,7 +158,7 @@
                 </li>
                 <li class="user-button">
                     <div class="flex user-page">
-                        <i class="fa-solid fa-user fa-2x"></i>
+                        <a href="../../user/historic/index.html"><i class="fa-solid fa-user fa-2x"></i></a>
                     </div>
                 </li>
             </ul>
