--- a/doug/help/help-page.html
+++ b/doug/help/help-page.html
@@ -169,10 +169,10 @@
                 <h2>AJUDA</h2>
                 <nav>
                     <ul class="help_list">
-                        <li id="help_faq">PERGUNTAS FREQUENTES <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
-                        <li id="help_about">SOBRE <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
-                        <li id="help_feedback">FEEDBACK <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
-                        <li id="help_suport">SUPORTE <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
+                        <li onclick="togglePainel('faq_container')" id="help_faq">PERGUNTAS FREQUENTES <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
+                        <li onclick="togglePainel('faq_about')" id="help_about">SOBRE <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
+                        <li onclick="togglePainel('faq_feedback')" id="help_feedback">FEEDBACK <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
+                        <li onclick="togglePainel('faq_nexusChat')" id="help_suport">SUPORTE <i class="fa-solid fa-circle-chevron-right" style="color: #086788; font-size: 30px;"></i></li>
                     </ul>
                 </nav>
 
@@ -269,7 +269,7 @@
             </div>
 
 <!-- =========================PAINEL SOBRE ========================-->
-            <div class="painel_about">
+            <div class="painel_about" id="faq_about">
                 <h2>Sobre</h2>
                 <div class="about_content">
                     <div class="about_top">
@@ -289,7 +289,7 @@
             </div>
 
 <!-- =========================PAINEL FEEDBACK ========================-->
-            <div id="painel_feedback">
+            <div class="painel_feedback" id="faq_feedback">
                 <h2>Feedback</h2>
                 <div class="feedback_content">
                     <div class="feedback_top">
@@ -311,7 +311,7 @@
             </div>
 
 <!-- =========================PAINEL NEXUSCHAT ========================-->
-            <div id="painel_nexusChat">
+            <div class="painel_nexusChat" id="faq_nexusChat">
                 <div class="nexusChat_top">
                     <h2><i class="fa-solid fa-circle-chevron-left" style="color: white; padding-right: 10px;"></i>NexusChat</h2>
                 </div>
