ajustando css pagina de ajuda

--- a/doug/help/help-page.html
+++ b/doug/help/help-page.html
@@ -179,7 +179,7 @@
             </div>
 
 <!-- =========================PAINEL QUESTION ========================-->
-            <div id="faq_container" class="faq-container">
+            <div id="faq_container" class="faq-container painel">
 
                 <h2>Perguntas Frequentes</h2>
 
@@ -269,8 +269,8 @@
             </div>
 
 <!-- =========================PAINEL SOBRE ========================-->
-            <div class="painel_about" id="faq_about">
-                <h2>Sobre</h2>
+            <div class="painel painel_about" id="faq_about">
+                <h2 class="title">Sobre</h2>
                 <div class="about_content">
                     <div class="about_top">
                         <h2>NOSSA HISTÓRIA</h2>
@@ -281,15 +281,14 @@
                         Ratione doloremque vero voluptatem, perspiciatis provident voluptas labore porro natus. Dolor aliquam doloremque dicta corporis deserunt voluptatem dolores perspiciatis aliquid quod tenetur. Provident officia ad cupiditate hic sequi a magni.
                         Dicta fuga recusandae numquam esse voluptatibus. Obcaecati eaque quidem minus quod adipisci eveniet dolor voluptatum libero ea provident sapiente, velit sequi temporibus. Et in culpa placeat magni suscipit laboriosam! Eligendi.
                         Nobis debitis nam dolorem praesentium sed quam, ad, nesciunt tempore impedit quas voluptatibus consequuntur sequi velit! Neque quidem ipsam consectetur architecto incidunt facere culpa officiis suscipit laboriosam, repellat commodi at.
-                        Sunt, accusantium modi. Voluptas ipsum tempore, libero temporibus natus, voluptatem amet facere provident quae commodi voluptatibus ex quibusdam accusantium.
-
+                        Sunt, accusantium modi. 
                     </div>
                 </div>
     
             </div>
 
 <!-- =========================PAINEL FEEDBACK ========================-->
-            <div class="painel_feedback" id="faq_feedback">
+            <div class="painel painel_feedback" id="faq_feedback">
                 <h2>Feedback</h2>
                 <div class="feedback_content">
                     <div class="feedback_top">
@@ -311,7 +310,7 @@
             </div>
 
 <!-- =========================PAINEL NEXUSCHAT ========================-->
-            <div class="painel_nexusChat" id="faq_nexusChat">
+            <div class="painel painel_nexusChat" id="faq_nexusChat">
                 <div class="nexusChat_top">
                     <h2><i class="fa-solid fa-circle-chevron-left" style="color: white; padding-right: 10px;"></i>NexusChat</h2>
                 </div>
