--- a/login-page/index.html
+++ b/login-page/index.html
@@ -176,23 +176,21 @@
       </div>
       <div class="panel flex">
         <h3 class="carrossel-title">Artigos</h3>
-        <p class="carrossel-sub">Aprenda através de textos feitos pela comunidade</p>
+        <a href="../doug/article/article.html"><p class="carrossel-sub">Aprenda através de textos feitos pela comunidade</p></a>
       </div>
       <div class="panel flex">
         <h3 class="carrossel-title">Exercícios</h3>
-        <p class="carrossel-sub">Pratique seus conhecimentos através de exercícios</p>
-
+        <a href="../doug/exercises/exercises.html"><p class="carrossel-sub">Pratique seus conhecimentos através de exercícios</p></a>
       </div>
       <div class="panel flex">
         <h3 class="carrossel-title">Comunidade</h3>
-        <p class="carrossel-sub">Retire suas dúvidas e expanda seus conhecimentos com auxilio de outros usuários
-        </p>
+        <a href="../doug/comunity/comunity.html"><p class="carrossel-sub">Retire suas dúvidas e expanda seus conhecimentos com auxilio de outros usuários
+        </p></a>
 
       </div>
       <div class="panel flex">
         <h3 class="carrossel-title">Em alta</h3>
-        <p class="carrossel-sub">Busque os vídeos e trilhas mais vistos</p>
-
+        <a href="../search-page/index.html"><p class="carrossel-sub">Busque os vídeos e trilhas mais vistos</p></a>
       </div>
     </div>
 
