adicionei o toggle na pagina de ajuda e arrumeis alguns css da playlist de video player

--- a/doug/playervideo/player.html
+++ b/doug/playervideo/player.html
@@ -180,10 +180,10 @@
 
                 <div class="playlist-content">
                     <ul class="playlist-list">
-                        <li class="button-playlist"><a href="#">Vídeo 01</a></li>
-                        <li class="button-playlist"><a href="#">Vídeo 02</a></li>
-                        <li class="button-playlist"><a href="#">Vídeo 03</a></li>
-                        <li class="button-playlist"><a href="#">Vídeo 04</a></li>
+                        <li class="button-playlist" style="background-color: #086788;"><a href="./player.html">Vídeo 01</a></li>
+                        <li class="button-playlist"><a href="player2.html">Vídeo 02</a></li>
+                        <li class="button-playlist"><a href="./player3.html">Vídeo 03</a></li>
+                        <li class="button-playlist"><a href="./player4.html">Vídeo 04</a></li>
                         <li class="button-playlist"><a href="#">Vídeo 05</a></li>
                         <li class="button-playlist"><a href="#">Vídeo 06</a></li>
                         <li class="button-playlist"><a href="#">Vídeo 07</a></li>
