--- a/doug/playervideo/player3.html
+++ b/doug/playervideo/player3.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../img/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,7 +9,9 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,1,0" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <script src="https://unpkg.com/akar-icons-fonts"></script>
-    <title>Artigos</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Comunidade</title>
     <link rel="stylesheet" href="../../components/sidebar/sidebar.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -139,13 +138,11 @@
             </li>
         </ul>
     </aside>
-
     <header>
         <nav>
             <ul class="grid-header">
                 <li class="menu-btn">
-                    <img id="showMenu" class="menu-icon" src="../img/logomarca-png.png"
-                        alt="Logomarca do Nexus Studium">
+                    <img class="menu-icon" id="showMenu" src="../img/logomarca-png.png" alt="Logomarca do Nexus Studium">
                 </li>
                 <li class="search-bar">
                     <div>
@@ -158,7 +155,9 @@
                 </li>
                 <li class="user-button">
                     <div class="flex user-page">
-                        <a href="../../user/historic/index.html"><i class="fa-solid fa-user fa-2x"></i></a>
+                        <a href="../../user/historic/index.html">
+                            <i class="fa-solid fa-user fa-2x"></i>
+                        </a>
                     </div>
                 </li>
             </ul>
@@ -166,73 +165,83 @@
     </header>
 
     <main class="container">
-        <div class="painel_nav">
-            <nav>
-                <ul>
-                    <li><i class="fa-solid fa-list-check" style="color: #8DB1AB; margin-right: 30px"></i><a
-                            href="#">Assuntos</a></li>
-                    <li><i class="fa-solid fa-circle-question" style="color: #8DB1AB; margin-right: 30px;"></i><a
-                            href="">Dúvidas recentes</a></li>
-                    <li><i class="fa-solid fa-bookmark" style="color: #8DB1AB; margin-right: 30px"></i><a
-                            href="">Salvos</a></li>
 
-                </ul>
-            </nav>
+        <div class="nav_video">
+            <a href="./player2.html"><button>Vídeo Anterior</button></a>
+
+            <a href="./player4.html"><button>Próximo Vídeo</button></a>
         </div>
 
-        <div class="painel_content">
-            <div class="painel_content_cabecalho">
-                <h1>Artigos de Estudo</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur reprehenderit molestias
-                    provident id recusandae ea molestiae fuga at cupiditate, animi deserunt voluptates ex, sed, quidem
-                    non temporibus adipisci cum porro.</p>
-            </div>
-            <hr>
-
-            <div class="painel_content_iten">
-                <div class="content_iten_title_icons">
-                    <a href="../../article/index.html" class="content_iten_title">Tecnologia para Programadores</a>
-                    <div class="content_iten_icon">
-                        <i class="fa-solid fa-circle-check"
-                            style="color: #8DB1AB; font-size: 28px; margin-right: 10px; "></i>
-                        <i class="fa-solid fa-fire" style="color: orange; font-size: 28px;"></i>
-                    </div>
+        <div class="main-painel">
+            <section class="playlist-section">
+                <div class="head-playlist">
+                    <h2>Playlist</h2>
                 </div>
-                <p>Autor: <a href="#">Junim pro do PHP</a></p>
 
-                <div class="review_iten">
-                    <button><i class="fa-regular fa-thumbs-up"
-                            style="color: #8DB1AB; font-size: 30px; margin-right: 10px; background: 0;"></i></button>
-                    <p style="margin-right: 30px;">15K</p>
-                    <button><i class="fa-regular fa-comment"
-                            style="color: #8DB1AB; font-size: 30px; margin-right: 10px;"></i></button>
-                    <p>15K</p>
+                <div class="playlist-content">
+                    <ul class="playlist-list">
+                        <li class="button-playlist" style="background-color: #086788;"><a href="./player.html">Vídeo 01</a></li>
+                        <li class="button-playlist" style="background-color: #086788;"><a href="./player2.html">Vídeo 02</a></li>
+                        <li class="button-playlist" style="background-color: #086788;;"><a href="./player3.html">Vídeo 03</a></li>
+                        <li class="button-playlist"><a href="./player4.html">Vídeo 04</a></li>
+                        <li class="button-playlist"><a href="#">Vídeo 05</a></li>
+                        <li class="button-playlist"><a href="#">Vídeo 06</a></li>
+                        <li class="button-playlist"><a href="#">Vídeo 07</a></li>
+                        <li class="button-playlist"><a href="#">Vídeo 08</a></li>
+                        <li class="button-playlist"><a href="#">Vídeo 09</a></li>
+                        <li class="button-playlist"><a href="#">Vídeo 10</a></li>
+
+                    </ul>
+
                 </div>
-                <hr>
-            </div>
 
-            <div class="painel_content_iten">
-                <div class="content_iten_title_icons">
-                    <a href="#" class="content_iten_title">Estudando todos os dias</a>
-                    <div class="content_iten_icon">
-                        <i class="fa-solid fa-circle-check"
-                            style="color: #8DB1AB; font-size: 28px; margin-right: 10px; "></i>
-                        <i class="fa-solid fa-fire" style="color: orange; font-size: 28px;"></i>
-                    </div>
+            </section>
+
+            <section class="video-section">
+                <div class="video-background">
+                    <iframe width="670" height="462" src="https://www.youtube.com/embed/S9uPNppGsGo?si=oaIETrZ4dvWpSGgj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"></iframe>
                 </div>
-                <p>Autor: <a href="#">Junim pro do PHP</a></p>
 
-                <div class="review_iten">
-                    <button><i class="fa-regular fa-thumbs-up"
-                            style="color: #8DB1AB; font-size: 30px; margin-right: 10px; background: 0;"></i></button>
-                    <p style="margin-right: 30px;">15K</p>
-                    <button><i class="fa-regular fa-comment"
-                            style="color: #8DB1AB; font-size: 30px; margin-right: 10px;"></i></button>
-                    <p>15K</p>
+                <div class="video-title">
+                    <h2>Iniciando PHP - Testando suas primeiras linhas</h2>
                 </div>
-                <hr>
-            </div>
 
+                <div class="info-title">
+                    <ul class="info-social">
+                        <li><a href="#"><i class="fa-brands fa-linkedin fa-x" style="color: #000000;"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-square-instagram fa-1x" style="color: #000000;"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-github fa-1x" style="color: #000000;"></i></a></li>
+                    </ul>
+
+                    <h2 class="autor-information">
+                        <i class="fa-solid fa-circle-user" style="color: #000000;"></i>
+                        <a id="autor-link" href="#">Junim Pro do PHP</a>
+                    </h2>
+
+                    <ul class="video-review">
+                        <li><i class="fa-regular fa-star" style="color: #000000;"></i></li>
+                        <li><i class="fa-regular fa-star" style="color: #000000;"></i></li>
+                        <li><i class="fa-regular fa-star" style="color: #000000;"></i></li>
+                        <li><i class="fa-regular fa-star" style="color: #000000;"></i></li>
+                        <li><i class="fa-regular fa-star" style="color: #000000;"></i></li>
+                    </ul>
+                </div>
+
+            </section>
+
+            <section class="comment-section">
+                <div class="head-comment">
+                    Comentários
+                </div>
+
+                <div class="foot-comment">
+                    <input type="text" placeholder="Comente aqui">
+
+                    <button><i class="fa-regular fa-paper-plane" style="color: #ffffff;"></i></a></button>
+
+                </div>
+
+            </section>
         </div>
 
     </main>
@@ -256,5 +265,4 @@
     </footer>
     <script src="../../components/sidebar/sidebar.js"></script>
 </body>
-
 </html>
