--- a/exercises/index.html
+++ b/exercises/index.html
@@ -160,7 +160,7 @@
         <li class="user-button">
           <a href="../user/historic/index.html">
             <div class="flex user-page">
-              <i class="ai-person"></i>
+              <i class="fa-solid fa-user fa-2x"></i>
             </div>
           </a>
         </li>
